// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RatingIcon renders active 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <span>
      <svg
        class="PicassoSvgStarSolid16-root PicassoRatingIcon-clickableIcon PicassoSvgStarSolid16-yellow"
        style="min-width: 16px; min-height: 16px;"
        viewBox="0 0 16 16"
      >
        <path
          d="M8 11.5l-4.114 2.163.785-4.581-3.328-3.245 4.6-.669L8 1l2.057 4.168 4.6.669-3.328 3.245.785 4.581z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`RatingIcon renders inactive 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <span>
      <svg
        class="PicassoSvgStarSolid16-root PicassoSvgStarSolid16-yellow"
        style="min-width: 16px; min-height: 16px;"
        viewBox="0 0 16 16"
      >
        <path
          d="M8 11.5l-4.114 2.163.785-4.581-3.328-3.245 4.6-.669L8 1l2.057 4.168 4.6.669-3.328 3.245.785 4.581z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`RatingIcon renders large 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <span>
      <svg
        class="PicassoSvgStarSolid24-root PicassoRatingIcon-clickableIcon PicassoSvgStarSolid24-yellow"
        style="min-width: 24px; min-height: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 18.5l-6.466 3.4 1.235-7.2-5.23-5.1 7.228-1.05L12 2l3.233 6.55 7.229 1.05-5.231 5.1 1.235 7.2z"
        />
      </svg>
    </span>
  </div>
</div>
`;
